--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,7 @@
 </head>
 <body>
 	<center><h1>Samsung NX will never die!</h1></center>
+	<p>Hello, you are here:</p>
+	<code>{{ useragent }}</code>
 	<p style="text-align: right"><br/><br/><a href="https://github.com/ge0rg/samsung-nx-emailservice">source code</a></p>
 </body>
