email error: provide XML response with comment

--- a/templates/response-error.xml
+++ b/templates/response-error.xml
@@ -1,1 +1,1 @@
-<Response ErrCode="{{ errcode }}" ErrSubCode="{{ errsubcode }}" />
+<Response ErrCode="{{ errcode }}" ErrSubCode="{{ errsubcode }}" /><!-- {{ comment }} -->
